--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 authors = ["Pascal Hertleif <killercup@gmail.com>"]
 
 [dependencies]
+
+[dev-dependencies]
+pretty_assertions = "0.5.1"
+duct = "0.10.0"
