--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,6 +30,12 @@ jobs:
           command: test
           args: -- --nocapture --quiet
 
+      - name: examples
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --examples -- --nocapture --quiet
+
       - name: formatting
         uses: actions-rs/cargo@v1
         with:
