--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,8 @@ jobs:
       run: cargo test --workspace --all-features
     - name: No-default features
       run: cargo test --workspace --no-default-features
+    - name: Examples
+      run: cargo test --examples
   msrv:
     name: "Check MSRV: 1.54.0"
     needs: smoke
